--- a/MustangClientHandler/MustangClientHandler.csproj
+++ b/MustangClientHandler/MustangClientHandler.csproj
@@ -59,6 +59,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -93,9 +96,12 @@
       <DependentUpon>AddClient.xaml</DependentUpon>
     </Compile>
     <Compile Include="EF\msPayment.cs" />
+    <Compile Include="Enums\ReportType.cs" />
+    <Compile Include="Enums\UserType.cs" />
     <Compile Include="GetPayment.xaml.cs">
       <DependentUpon>GetPayment.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Reports\ReportManager.cs" />
     <Compile Include="UpdateActions.cs" />
     <Page Include="AddClient.xaml">
       <SubType>Designer</SubType>
