adding UI Search Test

--- a/TestingMustangHandler/App.config
+++ b/TestingMustangHandler/App.config
@@ -39,4 +39,7 @@
 			<add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
 		</DbProviderFactories>
 	</system.data>
+	<connectionStrings>
+		<add name="DefaultConnection" connectionString="Data Source=.\MustangDB.db" providerName="System.Data.SQLite" />
+	</connectionStrings>
 </configuration>
