--- a/TestingMustangHandler/UITestingMustangHandler.csproj
+++ b/TestingMustangHandler/UITestingMustangHandler.csproj
@@ -83,8 +83,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Login.cs" />
+    <Compile Include="UILoginTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UISearchTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
