--- a/MustangClientHandler/appsettings.json
+++ b/MustangClientHandler/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "ClientId": "***REMOVED***",
-    "ClientSecret": "***REMOVED***"
+    "ClientId": "NEW SECRET BLYA",
+    "ClientSecret": "NEW SECRET"
 }
